Bug 128979 - Freeze on switching icon them under particular conditions.
Summary: Freeze on switching icon them under particular conditions.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.beta1+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.5.0 target:6.4.0.1
Keywords: bibisected, bisected, regression
: 128741 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-23 14:38 UTC by Hussam Al-Tayeb
Modified: 2019-12-10 20:43 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hussam Al-Tayeb 2019-11-23 14:38:21 UTC
Description:
Icon switching can freeze libreoffice.

Steps to Reproduce:
1. Compile Libreoffice from 6-4 branch with qt5/kde disabled.
2. Run your libreoffice build under KDE.
3. It will use gtk3 vlc and gtk3 filepicker since qt5 is disabled. It will however use breeze icon theme by default.
4. Open options and try to change the icon them to Tango. Other icon themes will work.

Actual Results:
Freeze.

Expected Results:
No freeze.


Reproducible: Always


User Profile Reset: No


OpenGL enabled: Yes

Additional Info:
Comment 1 Xisco Faulí 2019-11-26 11:23:59 UTC
Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 2 Hussam Al-Tayeb 2019-11-26 11:31:46 UTC
Version: 6.4.0.0.beta1+
Build ID: 8a18bed665bfc081a728c017e27a925c914c97f6
CPU threads: 4; OS: Linux 4.19; UI render: GL; VCL: gtk3; 
Locale: en-US (en_US.utf8); UI-Language: en-US
Calc: threaded

LibreOffice is a modern, easy-to-use, open source productivity suite for word processing, spreadsheets, presentations and more.

See Log: 8a18bed665bfc081a728c017e27a925c914c97f6
Comment 3 Xisco Faulí 2019-11-27 14:58:01 UTC
Reproduced in

Version: 6.5.0.0.alpha0+
Build ID: 3a6f270edfffb97763927b2732feacedbdac1e80
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 4 Xisco Faulí 2019-11-27 15:30:07 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=94d6fa11d086187b82adf9aa596e0f334827e095

author	Caolán McNamara <caolanm@redhat.com>	2019-09-17 12:50:05 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2019-09-20 21:20:51 +0200
commit 94d6fa11d086187b82adf9aa596e0f334827e095 (patch)
tree 4a44af903b2572efe89ae5e8aa67bb092644e038
parent 3c84b18f4f0fe4058de60b1c62149275ed858b79 (diff)
weld OfaTreeOptionsDialog

Bisected with: bibisect-linux64-6.4

Adding Cc: to Caolán McNamara
Comment 5 Commit Notification 2019-11-27 20:47:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a2bd7d71b004accae50c44b573a108140ab0678

Resolves: tdf#128979 crash/freeze on selecting last theme in list

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2019-11-27 20:53:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/a83759f4909190974ed07291c6a3a9ef837e834d

Resolves: tdf#128979 crash/freeze on selecting last theme in list

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-11-28 09:58:27 UTC
Verified in

Version: 6.5.0.0.alpha0+
Build ID: 2bf687bebb30defe576ddb20c1c9680979ed3086
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!! Should it be closed now ?
Comment 8 Caolán McNamara 2019-11-28 10:02:03 UTC
yes, fixed now in master and 6-4
Comment 9 Hussam Al-Tayeb 2019-11-28 11:19:25 UTC
@Caolán, thank you very much.(In reply to Xisco Faulí from comment #7)
> @Caolán, thanks for fixing this issue!! Should it be closed now ?

Indeed. Thank you very much, Caolán.
Comment 10 BogdanB 2019-12-10 20:43:28 UTC
*** Bug 128741 has been marked as a duplicate of this bug. ***