Resolves: tdf#128979 crash/freeze on selecting last theme in list

Change-Id: Ie47feb34cfbd6af0788a679ca2b5985ad6f9cbbf